<resources>
    <string name="app_name">interactive-cubes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    //GameFragment
    <string name="btnSubsLevel">-</string>
    <string name="btnAddLevel">+</string>
    <string name="txLevel">Nivel: 1</string>
    <string name="txConf">Selecciona un nivel:</string>
    <string name="txScan">Escanea los cubos:</string>
    <string name="btnVerify">Verificar</string>


    //Auth
    <string name="facebook_app_id">320744275196487</string>
    <string name="fb_login_protocol_scheme">fb320744275196487</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
