<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.GameFragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/topLinear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.332"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txConf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txConf"
                tools:layout_editor_absoluteX="136dp"
                tools:layout_editor_absoluteY="284dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txLevel"
                    tools:layout_editor_absoluteX="174dp"
                    tools:layout_editor_absoluteY="311dp" />

                <Button
                    android:id="@+id/btnSubsLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnSubsLevel"
                    tools:layout_editor_absoluteX="128dp"
                    tools:layout_editor_absoluteY="366dp" />

                <Button
                    android:id="@+id/btnAddLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnAddLevel"
                    tools:layout_editor_absoluteX="228dp"
                    tools:layout_editor_absoluteY="366dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txScan"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/txScan"
                tools:layout_editor_absoluteX="140dp"
                tools:layout_editor_absoluteY="448dp" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/buttonScroll"
            android:layout_width="0dp"
            android:layout_height="321dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnVerify"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/downLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnVerify"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:text="@string/btnVerify"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>